v4l-dvb: stop treating warnings as errors
Signed-off-by: Tomasz Maciej Nowak <tmn505@gmail.com>

--- a/v4l-dvb/Makefile
+++ b/v4l-dvb/Makefile
@@ -75,6 +75,7 @@ endef
 define Build/Compile
 	+$(KERNEL_MAKE) \
 		$(PKG_JOBS) \
+		CONFIG_WERROR=n \
 		M=$(PKG_BUILD_DIR)/$(PKG_EXTMOD_SUBDIRS) \
 		modules
 
